# Ai-Crew-

./: .gitignore  README.md
ai/: README.md  _combined_knowledge.txt  pyproject.toml
ai/knowledge/: 三亚旅游指南.docx
ai/src/ai/: crew.py  flow_crew.py  main.py
ai/src/ai/config/: agents.yaml  tasks.yaml
ai/tools/: custom_tool.py  weather_tool.py
