[project]
name = "ai"
version = "0.1.0"
description = "AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
     "crewai[tools]",
     "docling>=2.95.0",
     "onnxruntime==1.18.0",
]

[project.scripts]
ai = "ai.main:run"
plan = "ai.main:run"
plan_with_trigger = "ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
